<resources>
    <string name="app_name">CensusApp</string>
    <string name="action_settings">Settings</string>
    <string name="contact_name_hint">Enter Name</string>
    <string name="contact_phone_number_hint">Enter Phone Number</string>
    <string name="contact_street_hint">Enter Street</string>
    <string name="contact_city_hint">Enter City</string>
    <string name="contact_contacted_checkbox">Contacted</string>
</resources>
