<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/tableLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactNameEditText"
        android:hint="@string/contact_name_hint"
        android:layout_marginBottom="@dimen/component_bottom_margin"
        android:inputType="textCapWords|textPersonName"
        android:ems="10"/>

    <EditText
        android:id="@+id/contactStreetEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/component_bottom_margin"
        android:ems="10"
        android:hint="@string/contact_street_hint"
        android:inputType="textCapWords|textPostalAddress" />

    <EditText
        android:id="@+id/contactCityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/component_bottom_margin"
        android:ems="10"
        android:hint="@string/contact_city_hint"
        android:inputType="textCapWords|textPostalAddress" />

    <EditText
        android:id="@+id/contactPhoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/component_bottom_margin"
        android:ems="10"
        android:hint="@string/contact_phone_number_hint"
        android:inputType="textCapWords|phone|textPhonetic" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"></TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_contacted_checkbox"
                android:id="@+id/contactedCheckBox" />
        </TableRow>
    </TableRow>
</TableLayout>
